--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
       <!-- Title slide with email -->
       <section>
         <h1>Quarterly Earnings Report</h1>
-        <p>Prepared by: <href> 22f2000199@ds.study.iitm.ac.in</href></p>
+        <p>
+    Prepared by: 
+    <a href="mailto:22f2000199@ds.study.iitm.ac.in">
+      22f2000199@ds.study.iitm.ac.in
+    </a>
+  </p>
         <aside class="notes">Introduce yourself and highlight that this is an interactive deck.</aside>
       </section>
 
